# signbridge

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: deploy.yml  test.yml
CV/: config.py  resave_checkpoint.py  upload_history_to_wandb.py
CV/assets/: label_mapping.json  label_mapping_demo.json
CV/data/: __init__.py  transforms.py  video_reader.py
CV/inference/: __init__.py  sign_recognizer.py  types.py
CV/models/: i3d.py  loader.py
CV/scripts/: __init__.py  test_webcam.py  webcam_hf_client.py
CV/training/: __init__.py  datasets.py  train_i3d.py
api/: main.py
api/common/: __init__.py  health.py  schemas.py  video_io.py
api/dependencies/: models.py
api/routers/: health.py  sign.py
api/schemas/: sign.py
api/sign_demo/: __init__.py  config.py  dependencies.py  main.py  routers.py
api/sign_full/: __init__.py  config.py  dependencies.py  main.py  routers.py
api/utils/: video_io.py
apps/Web/: .env.example  package-lock.json  package.json
apps/Web/pages/: .gitignore  README.md  index.js
apps/Web/pages/room/: [roomId].js
experiments/notebooks/: 02_real-time_sign_to_text.ipynb  02_real-time_sign_to_text_clean.ipynb  02_real-time_sign_to_text_islr_combined.ipynb  03_islr200_training_final.ipynb  04_islr200_ultimate_training.ipynb  NLA-SLR.ipynb  colab_inference.ipynb  protogcn-sample.ipynb  protogcn.ipynb
notebooks/: 01_sign_to_text.ipynb  01_speech_to_text.ipynb  02_conversational_demo_seed.ipynb  02_streaming_speech_to_text.ipynb  05_msasl_downloader.ipynb
tests/: conftest.py
tests/integration/: test_api_demo.py
tests/unit/: test_model.py  test_sign_recognizer.py  test_transforms.py  test_types.py
(+4 files in other folders)
